<resources>
    <string name="app_name">Prova3</string>
    <string name="library">Library</string>
    <string name="for_you">For You</string>
    <string name="browse">Browse</string>
    <string name="radio">Radio</string>
    <string name="search">Search</string>
    <string name="_0_00">0:00</string>
    <string name="_4_00">-4:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_10_musicas">10 Músicas</string>
</resources>